--- a/src/main/resources/view/DashboardForm.fxml
+++ b/src/main/resources/view/DashboardForm.fxml
@@ -4,9 +4,9 @@
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXRadioButton?>
 <?import com.jfoenix.controls.JFXTextField?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="562.0" prefWidth="791.0" style="-fx-background-image:url('img/dashboard.jpg')" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="562.0" prefWidth="791.0" style="-fx-background-image:url('img/dashboard.jpg')" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.DashboardFormController">
    <bottom>
       <GridPane prefHeight="608.0" prefWidth="791.0" BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -68,11 +68,14 @@
                         <Image url="@../img/user.png" />
                      </image>
                   </ImageView>
-                  <JFXRadioButton text="User" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                  <JFXRadioButton fx:id="user" text="User" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="24.0" />
-                     </font></JFXRadioButton>
-                  <JFXRadioButton layoutX="167.0" layoutY="115.0" text="Admin" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                     </font>
+                     <toggleGroup>
+                        <ToggleGroup fx:id="users" />
+                     </toggleGroup></JFXRadioButton>
+                  <JFXRadioButton fx:id="admin" layoutX="167.0" layoutY="115.0" text="Admin" textFill="WHITE" toggleGroup="$users" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
@@ -88,12 +91,12 @@
                 <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="40.0" minHeight="10.0" prefHeight="19.0" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="59.0" minHeight="10.0" prefHeight="59.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="67.0" minHeight="10.0" prefHeight="67.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="80.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <JFXTextField focusColor="WHITE" maxWidth="300.0" style="-fx-text-fill: WHITE" unFocusColor="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+                  <JFXTextField fx:id="userNameTxt" focusColor="WHITE" maxWidth="300.0" style="-fx-text-fill: WHITE" unFocusColor="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
@@ -108,23 +111,40 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <JFXPasswordField focusColor="WHITE" maxWidth="300.0" style="-fx-text-fill: WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                  <JFXPasswordField fx:id="passwordTxt" focusColor="WHITE" maxWidth="300.0" style="-fx-text-fill: WHITE" unFocusColor="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="3">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </JFXPasswordField>
-                  <JFXButton text="Log in" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="5">
+                  <JFXButton maxWidth="300.0" onAction="#logInButtonOnAction" style="-fx-background-color: #0693e3;" text="Log in" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="5">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </JFXButton>
+                  <GridPane GridPane.rowIndex="4">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <JFXButton text="Update password" textFill="WHITE" GridPane.halignment="RIGHT">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </JFXButton>
+                        <JFXButton layoutX="10.0" layoutY="27.0" text="Forgot password ?" textFill="WHITE" GridPane.columnIndex="1">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </JFXButton>
+                     </children>
+                  </GridPane>
                </children>
             </GridPane>
-            <ButtonBar prefHeight="40.0" prefWidth="200.0">
-              <buttons>
-                <Button mnemonicParsing="false" text="Button" />
-              </buttons>
-            </ButtonBar>
+            <ButtonBar prefHeight="40.0" prefWidth="200.0" />
          </children>
       </GridPane>
    </bottom>
