--- a/src/main/resources/view/AdminDashboard.fxml
+++ b/src/main/resources/view/AdminDashboard.fxml
@@ -100,6 +100,15 @@
                   </JFXButton>
                </children>
             </GridPane>
+                <JFXButton fx:id="updateBtn" contentDisplay="GRAPHIC_ONLY" onAction="#updateButtonOnAction" prefHeight="64.0" prefWidth="76.0" GridPane.halignment="RIGHT">
+                    <graphic>
+                        <ImageView fitHeight="45.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@../img/setting.png" />
+                            </image>
+                        </ImageView>
+                    </graphic>
+                </JFXButton>
             </children>
         </GridPane>
     </center>
