--- a/src/main/resources/view/UserDashboard.fxml
+++ b/src/main/resources/view/UserDashboard.fxml
@@ -77,7 +77,7 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton layoutX="92.0" layoutY="34.0" prefHeight="46.0" prefWidth="241.0" style="-fx-background-color: #2196f3;" text="Update Status" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                  <JFXButton fx:id="updateStatusBtn" layoutX="92.0" layoutY="34.0" onAction="#updateStatusBtnOnAction" prefHeight="46.0" prefWidth="241.0" style="-fx-background-color: #2196f3;" text="Update Status" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
