--- a/src/main/resources/view/Inventory.fxml
+++ b/src/main/resources/view/Inventory.fxml
@@ -15,8 +15,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="555.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="555.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.InventoryController">
    <center>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -65,7 +64,7 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <JFXButton prefHeight="30.0" prefWidth="83.0" style="-fx-background-color: #0288d1;" text="Update" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="RIGHT">
+                  <JFXButton prefHeight="30.0" prefWidth="83.0" style="-fx-background-color: #0288d1;" text="Update" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
@@ -73,7 +72,7 @@
                         <Insets right="90.0" />
                      </GridPane.margin>
                   </JFXButton>
-                  <JFXButton layoutX="331.0" layoutY="12.0" prefHeight="30.0" prefWidth="79.0" style="-fx-background-color: #00d084;" text="Add" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="RIGHT">
+                  <JFXButton layoutX="331.0" layoutY="12.0" prefHeight="30.0" prefWidth="79.0" style="-fx-background-color: #00d084;" text="Add" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
