--- a/src/main/resources/view/PlaceOrderForm.fxml
+++ b/src/main/resources/view/PlaceOrderForm.fxml
@@ -66,11 +66,6 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <Label text="ODR#00001" GridPane.columnIndex="2">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                  </Label>
                   <Label layoutX="116.0" layoutY="21.0" text="Customer Name:" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="18.0" />
@@ -111,15 +106,15 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </Label>
-                  <JFXTextField maxWidth="250.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                  <JFXTextField layoutX="309.0" layoutY="71.0" maxWidth="250.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                  <JFXTextField layoutX="309.0" layoutY="119.0" maxWidth="250.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                  <JFXTextField layoutX="309.0" layoutY="167.0" maxWidth="250.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-                  <JFXTextField layoutX="309.0" layoutY="215.0" maxWidth="250.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                  <JFXTextField layoutX="309.0" layoutY="263.0" maxWidth="250.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-                  <JFXTextField layoutX="309.0" layoutY="311.0" maxWidth="250.0" GridPane.columnIndex="2" GridPane.rowIndex="7" />
-                  <JFXTextField layoutX="309.0" layoutY="359.0" maxWidth="250.0" GridPane.columnIndex="2" GridPane.rowIndex="8" />
-                  <JFXButton prefHeight="34.0" prefWidth="157.0" style="-fx-background-color: #0d47a1;" text="Place" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="8" GridPane.valignment="TOP">
+                  <JFXTextField fx:id="nameTxt" maxWidth="250.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <JFXTextField fx:id="emailTxt" layoutX="309.0" layoutY="71.0" maxWidth="250.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                  <JFXTextField fx:id="NumberTxt" layoutX="309.0" layoutY="119.0" maxWidth="250.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                  <JFXTextField fx:id="catagoryTxt" layoutX="309.0" layoutY="167.0" maxWidth="250.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+                  <JFXTextField fx:id="ItemTxt" layoutX="309.0" layoutY="215.0" maxWidth="250.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+                  <JFXTextField fx:id="DescriptionTxt" layoutX="309.0" layoutY="263.0" maxWidth="250.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+                  <JFXTextField fx:id="partsTxt" layoutX="309.0" layoutY="311.0" maxWidth="250.0" GridPane.columnIndex="2" GridPane.rowIndex="7" />
+                  <JFXTextField fx:id="priceTxt" layoutX="309.0" layoutY="359.0" maxWidth="250.0" GridPane.columnIndex="2" GridPane.rowIndex="8" />
+                  <JFXButton onAction="#placeButtonOnAction" prefHeight="34.0" prefWidth="157.0" style="-fx-background-color: #0d47a1;" text="Place" textFill="WHITE" GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="8" GridPane.valignment="TOP">
                      <GridPane.margin>
                         <Insets left="5.0" right="6.0" />
                      </GridPane.margin>
@@ -135,6 +130,7 @@
                         <Insets right="6.0" />
                      </GridPane.margin>
                   </JFXButton>
+                  <JFXTextField fx:id="orderIdTxt" maxWidth="200.0" GridPane.columnIndex="2" />
                </children>
             </GridPane>
          </children>
