--- a/src/main/resources/view/Item.fxml
+++ b/src/main/resources/view/Item.fxml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTreeTableView?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TreeTableColumn?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="560.0" prefWidth="777.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ItemController">
-   <center>
-      <GridPane BorderPane.alignment="CENTER">
+   <top>
+      <GridPane prefHeight="562.0" prefWidth="777.0" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="30.0" prefWidth="30.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="777.0" minWidth="10.0" prefWidth="711.0" />
@@ -18,8 +22,9 @@
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="-Infinity" minHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="491.0" minHeight="10.0" prefHeight="380.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="150.0" minHeight="10.0" prefHeight="150.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="500.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <JFXButton fx:id="backButton" contentDisplay="GRAPHIC_ONLY" onAction="#backButtonOnAction" prefHeight="42.0" prefWidth="52.0">
@@ -31,16 +36,55 @@
                   </ImageView>
                </graphic>
             </JFXButton>
-            <GridPane prefHeight="370.0" prefWidth="713.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <GridPane prefHeight="370.0" prefWidth="713.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="350.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="10.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="10.0" prefWidth="350.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="184.0" minHeight="10.0" prefHeight="34.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="351.0" minHeight="10.0" prefHeight="314.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="351.0" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
               </rowConstraints>
+               <children>
+                  <Label text="Electrical" GridPane.halignment="CENTER">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="10.0" layoutY="14.0" text="Electronic" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                  </Label>
+                  <JFXTreeTableView fx:id="tblElectricalItem" GridPane.rowIndex="1">
+                     <columns>
+                        <TreeTableColumn fx:id="colElectricImg" prefWidth="119.0" text="Image" />
+                        <TreeTableColumn fx:id="colElectricCode" prefWidth="119.0" text="Code" />
+                        <TreeTableColumn fx:id="colElectricName" prefWidth="119.0" text="Name" />
+                     </columns>
+                  </JFXTreeTableView>
+                  <JFXTreeTableView fx:id="tblElectronicItem" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                     <columns>
+                        <TreeTableColumn fx:id="colElectroImg" prefWidth="115.0" text="Image" />
+                        <TreeTableColumn fx:id="colElectroCode" prefWidth="129.0" text="Code" />
+                        <TreeTableColumn fx:id="colElectroName" prefWidth="110.0" text="Name" />
+                     </columns>
+                  </JFXTreeTableView>
+                  <JFXButton fx:id="electricAddBtn" onAction="#electricAddBtnOnAction" prefHeight="16.0" prefWidth="144.0" style="-fx-background-color: #00d084;" text="Add" textFill="WHITE" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </JFXButton>
+                  <JFXButton fx:id="electroAddBtn" layoutX="10.0" layoutY="433.0" onAction="#electroAddBtnOnAction" prefHeight="16.0" prefWidth="144.0" style="-fx-background-color: #00d084;" text="Add" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </JFXButton>
+               </children>
             </GridPane>
          </children>
       </GridPane>
-   </center>
+   </top>
 </BorderPane>
