--- a/src/main/resources/view/Item.fxml
+++ b/src/main/resources/view/Item.fxml
@@ -72,12 +72,12 @@
                         <TreeTableColumn fx:id="colElectroName" prefWidth="110.0" text="Name" />
                      </columns>
                   </JFXTreeTableView>
-                  <JFXButton fx:id="electricAddBtn" onAction="#electricAddBtnOnAction" prefHeight="16.0" prefWidth="144.0" style="-fx-background-color: #00d084;" text="Add" textFill="WHITE" GridPane.rowIndex="2">
+                  <JFXButton fx:id="AddBtn" onAction="#AddBtnOnAction" prefHeight="16.0" prefWidth="144.0" style="-fx-background-color: #00d084;" text="Add" textFill="WHITE" GridPane.rowIndex="2">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton fx:id="electroAddBtn" layoutX="10.0" layoutY="433.0" onAction="#electroAddBtnOnAction" prefHeight="16.0" prefWidth="144.0" style="-fx-background-color: #00d084;" text="Add" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                  <JFXButton fx:id="removeBtn" layoutX="10.0" layoutY="433.0" onAction="#removeBtnOnAction" prefHeight="16.0" prefWidth="144.0" style="-fx-background-color: Red;" text="Remove" textFill="WHITE" GridPane.columnIndex="2" GridPane.rowIndex="2">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
