--- a/src/main/resources/view/Inventory.fxml
+++ b/src/main/resources/view/Inventory.fxml
@@ -31,12 +31,14 @@
             <RowConstraints maxHeight="334.0" minHeight="10.0" prefHeight="34.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <JFXButton fx:id="backButton" contentDisplay="GRAPHIC_ONLY" onAction="#backButtonOnAction" prefHeight="42.0" prefWidth="52.0" />
-            <ImageView fitHeight="33.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../img/back.png" />
-               </image>
-            </ImageView>
+            <JFXButton fx:id="backButton" contentDisplay="GRAPHIC_ONLY" onAction="#backButtonOnAction" prefHeight="42.0" prefWidth="52.0">
+               <graphic>
+                  <ImageView fitHeight="33.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../img/back.png" />
+                     </image>
+                  </ImageView>
+               </graphic></JFXButton>
             <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -72,14 +74,14 @@
                         <Insets right="90.0" />
                      </GridPane.margin>
                   </JFXButton>
-                  <JFXButton layoutX="331.0" layoutY="12.0" prefHeight="30.0" prefWidth="79.0" style="-fx-background-color: #00d084;" text="Add" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+                  <JFXButton fx:id="addBtn" layoutX="331.0" layoutY="12.0" onAction="#addBtnOnAction" prefHeight="30.0" prefWidth="79.0" style="-fx-background-color: #00d084;" text="Add" textFill="WHITE" GridPane.columnIndex="3" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </JFXButton>
-                  <JFXComboBox prefHeight="25.0" prefWidth="88.0" GridPane.rowIndex="1" />
-                  <JFXTextField maxWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <JFXTextField layoutX="113.0" layoutY="42.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                  <JFXComboBox fx:id="catagoryDrp" prefHeight="25.0" prefWidth="88.0" GridPane.rowIndex="1" />
+                  <JFXTextField fx:id="statusTxt" maxWidth="100.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <JFXTextField fx:id="itemCodeTxt" layoutX="113.0" layoutY="42.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                </children>
             </GridPane>
             <GridPane GridPane.columnIndex="1" GridPane.rowIndex="3">
@@ -94,36 +96,59 @@
                   <RowConstraints maxHeight="218.0" minHeight="10.0" prefHeight="218.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <JFXTreeTableView>
+                  <JFXTreeTableView fx:id="PendingTbl">
                      <columns>
-                        <TreeTableColumn prefWidth="75.0" text="Column X" />
-                        <TreeTableColumn prefWidth="106.0" text="Column X" />
-                        <TreeTableColumn prefWidth="123.0" text="Column X" />
+                        <TreeTableColumn fx:id="colPendCode" prefWidth="75.0" text="Item Code" />
+                        <TreeTableColumn fx:id="colPendCatagory" prefWidth="106.0" text="Catagory" />
+                        <TreeTableColumn fx:id="colPendOption" prefWidth="123.0" text="Option" />
                      </columns>
                   </JFXTreeTableView>
-                  <JFXTreeTableView GridPane.columnIndex="2">
+                  <JFXTreeTableView fx:id="pending2" GridPane.columnIndex="2">
                      <columns>
-                        <TreeTableColumn prefWidth="75.0" text="Column X" />
-                        <TreeTableColumn prefWidth="99.0" text="Column X" />
-                        <TreeTableColumn prefWidth="101.0" text="Column X" />
+                        <TreeTableColumn fx:id="colpend2Code" prefWidth="75.0" text="Item Code" />
+                        <TreeTableColumn fx:id="colpend2Catagory" prefWidth="99.0" text="Catagory" />
+                        <TreeTableColumn fx:id="colpend2Option" prefWidth="101.0" text="Option" />
                      </columns>
                   </JFXTreeTableView>
-                  <JFXTreeTableView GridPane.rowIndex="2">
+                  <JFXTreeTableView fx:id="processingTbl" GridPane.rowIndex="2">
                      <columns>
-                        <TreeTableColumn prefWidth="96.0" text="Column X" />
-                        <TreeTableColumn prefWidth="96.0" text="Column X" />
-                        <TreeTableColumn prefWidth="96.0" text="Column X" />
+                        <TreeTableColumn fx:id="colProCode" prefWidth="96.0" text="Item Code" />
+                        <TreeTableColumn fx:id="colProCatagory" prefWidth="96.0" text="Catagory" />
+                        <TreeTableColumn fx:id="colProOption" prefWidth="96.0" text="Option" />
                      </columns>
                   </JFXTreeTableView>
-                  <JFXTreeTableView GridPane.columnIndex="2" GridPane.rowIndex="2">
+                  <JFXTreeTableView fx:id="completedTbl" GridPane.columnIndex="2" GridPane.rowIndex="2">
                      <columns>
-                        <TreeTableColumn prefWidth="91.0" text="Column X" />
-                        <TreeTableColumn prefWidth="98.0" text="Column X" />
-                        <TreeTableColumn prefWidth="90.0" text="Column X" />
+                        <TreeTableColumn fx:id="colComCode" prefWidth="91.0" text="Item Code" />
+                        <TreeTableColumn fx:id="colComCatagory" prefWidth="98.0" text="Catagory" />
+                        <TreeTableColumn fx:id="colComOption" prefWidth="90.0" text="Option" />
                      </columns>
                   </JFXTreeTableView>
+                  <Label prefHeight="17.0" prefWidth="110.0" text="Processing" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
+                  <Label prefHeight="17.0" prefWidth="110.0" text="Completed" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Label>
                </children>
             </GridPane>
+            <Label prefHeight="17.0" prefWidth="110.0" text="Pending" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+            <Label prefHeight="17.0" prefWidth="110.0" text="Pending" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets right="160.0" />
+               </GridPane.margin>
+            </Label>
          </children>
       </GridPane>
    </center>
