Report ui create

--- a/src/main/resources/view/UserDashboard.fxml
+++ b/src/main/resources/view/UserDashboard.fxml
@@ -56,7 +56,7 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </JFXButton>
-                  <JFXButton layoutX="92.0" layoutY="35.0" prefHeight="46.0" prefWidth="241.0" style="-fx-background-color: #2196f3;" text="Reports" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                  <JFXButton fx:id="btnReport" layoutX="92.0" layoutY="35.0" onAction="#btnReportOnAction" prefHeight="46.0" prefWidth="241.0" style="-fx-background-color: #2196f3;" text="Reports" textFill="WHITE" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                      <font>
                         <Font name="System Bold" size="18.0" />
                      </font>
