send email class create

--- a/src/main/resources/view/ForgotPassword.fxml
+++ b/src/main/resources/view/ForgotPassword.fxml
@@ -46,7 +46,7 @@
                         <Font name="System Bold" size="18.0" />
                     </font>
                 </Label>
-                <JFXTextField layoutX="264.0" layoutY="269.0" maxWidth="300.0" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="TOP" />
+                <JFXTextField fx:id="emailTxt" layoutX="264.0" layoutY="269.0" maxWidth="300.0" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="TOP" />
                 <JFXButton fx:id="sendBtn" maxWidth="200.0" onAction="#SendButtonOnAction" prefHeight="39.0" prefWidth="200.0" style="-fx-background-color: #0693e3;" text="Send" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="4">
                     <font>
                         <Font name="System Bold" size="18.0" />
