--- a/src/main/resources/view/DashboardForm.fxml
+++ b/src/main/resources/view/DashboardForm.fxml
@@ -4,6 +4,7 @@
 <?import com.jfoenix.controls.JFXPasswordField?>
 <?import com.jfoenix.controls.JFXRadioButton?>
 <?import com.jfoenix.controls.JFXTextField?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ToggleGroup?>
@@ -89,7 +90,7 @@
               <rowConstraints>
                 <RowConstraints maxHeight="41.0" minHeight="10.0" prefHeight="34.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="47.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="50.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="50.0" minHeight="10.0" prefHeight="50.0" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="67.0" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
                   <RowConstraints maxHeight="87.0" minHeight="10.0" prefHeight="43.0" vgrow="SOMETIMES" />
@@ -137,6 +138,14 @@
                         </JFXButton>
                      </children>
                   </GridPane>
+                  <JFXButton fx:id="registerBtn" onAction="#registerBtnOnAction" prefHeight="25.0" prefWidth="129.0" style="-fx-background-color: #0693e3;" text="Register" textFill="WHITE" GridPane.halignment="CENTER">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets left="20.0" right="600.0" />
+                     </GridPane.margin>
+                  </JFXButton>
                </children>
             </GridPane>
             <ButtonBar prefHeight="40.0" prefWidth="200.0">
