--- a/src/main/resources/view/ForgotPassword.fxml
+++ b/src/main/resources/view/ForgotPassword.fxml
@@ -21,8 +21,8 @@
                 <RowConstraints maxHeight="116.0" minHeight="10.0" prefHeight="60.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="151.0" minHeight="10.0" prefHeight="106.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="131.0" minHeight="10.0" prefHeight="131.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="131.0" minHeight="10.0" prefHeight="131.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="131.0" minHeight="10.0" prefHeight="131.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="131.0" minHeight="10.0" prefHeight="93.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="131.0" minHeight="10.0" prefHeight="115.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="131.0" minHeight="10.0" prefHeight="131.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
@@ -41,17 +41,28 @@
                         <Font name="System Bold" size="36.0" />
                     </font>
                 </Label>
-                <Label layoutX="331.0" layoutY="195.0" prefHeight="27.0" prefWidth="201.0" text="Enter an email address" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+                <Label layoutX="331.0" layoutY="195.0" prefHeight="27.0" prefWidth="201.0" text="Enter an email address" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="TOP">
                     <font>
                         <Font name="System Bold" size="18.0" />
                     </font>
                 </Label>
-                <JFXTextField fx:id="emailTxt" layoutX="264.0" layoutY="269.0" maxWidth="300.0" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="TOP" />
-                <JFXButton fx:id="sendBtn" maxWidth="200.0" onAction="#SendButtonOnAction" prefHeight="39.0" prefWidth="200.0" style="-fx-background-color: #0693e3;" text="Send" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="4">
+                <JFXTextField fx:id="emailTxt" layoutX="264.0" layoutY="269.0" maxWidth="300.0" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                <JFXButton fx:id="sendBtn" maxWidth="200.0" onAction="#SendButtonOnAction" prefHeight="39.0" prefWidth="200.0" style="-fx-background-color: #0693e3;" text="Send" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="TOP">
                     <font>
                         <Font name="System Bold" size="18.0" />
                     </font>
                 </JFXButton>
+            <Label layoutX="314.0" layoutY="122.0" prefHeight="27.0" prefWidth="99.0" text="Enter code" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="BOTTOM">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <JFXTextField fx:id="codeTxt" layoutX="264.0" layoutY="162.0" maxWidth="300.0" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="TOP" />
+            <JFXButton fx:id="verifyBtn" layoutX="314.0" layoutY="253.0" maxWidth="200.0" onAction="#verifyBtnOnAction" prefHeight="39.0" prefWidth="200.0" style="-fx-background-color: #0693e3;" text="Verify" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="BOTTOM">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </JFXButton>
             </children>
         </GridPane>
    </center>
