--- a/src/main/resources/view/VerificationNewPassword.fxml
+++ b/src/main/resources/view/VerificationNewPassword.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXTextField?>
+<?import com.jfoenix.controls.JFXPasswordField?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -47,18 +47,18 @@
                         <Font name="System Bold" size="18.0" />
                     </font>
                 </Label>
-                <JFXTextField maxWidth="300.0" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="TOP" />
                 <Label layoutX="331.0" layoutY="195.0" prefHeight="27.0" prefWidth="306.0" text="Retype New password" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="BOTTOM">
                     <font>
                         <Font name="System Bold" size="18.0" />
                     </font>
                 </Label>
-                <JFXTextField layoutX="264.0" layoutY="269.0" maxWidth="300.0" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="TOP" />
-                <JFXButton maxWidth="299.0" prefHeight="39.0" prefWidth="300.0" style="-fx-background-color: #0693e3;" text="Submit" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="TOP">
+                <JFXButton fx:id="summitBtn" maxWidth="299.0" onAction="#sumbitBtnOnAction" prefHeight="39.0" prefWidth="300.0" style="-fx-background-color: #0693e3;" text="Submit" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="TOP">
                     <font>
                         <Font name="System Bold" size="18.0" />
                     </font>
                 </JFXButton>
+            <JFXPasswordField fx:id="pwdText" maxWidth="300.0" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+            <JFXPasswordField fx:id="retypePwdTxt" layoutX="264.0" layoutY="206.0" maxWidth="300.0" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="TOP" />
             </children>
         </GridPane>
    </bottom>
