--- a/src/main/resources/view/AdminDashboard.fxml
+++ b/src/main/resources/view/AdminDashboard.fxml
@@ -51,7 +51,7 @@
                         <Font name="System Bold" size="18.0" />
                      </font>
                   </JFXButton>
-                        <JFXButton prefHeight="46.0" prefWidth="241.0" style="-fx-background-color: #0288d1;" text="Register New User" textFill="WHITE" GridPane.halignment="CENTER">
+                        <JFXButton fx:id="registerBtn" onAction="#registerBtnOnAction" prefHeight="46.0" prefWidth="241.0" style="-fx-background-color: #0288d1;" text="Register New User" textFill="WHITE" GridPane.halignment="CENTER">
                             <font>
                                 <Font name="System Bold" size="18.0" />
                             </font>
